<resources>
    <string name="app_name">Criminal Intent</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>

    <string name="new_crime">New Crime</string>
    <string name="add_crime">Add Crime</string>
    <string name="no_crime">There are no crimes</string>
    <string name="delete_crime">Delete Crime</string>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="crime_report">%1$s!
        The crime is discovered on %2$s. %3$s, and %4$s
    </string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="call_suspect">Call suspect</string>
    <string name="permission_rationale">Contacts permissions are needed to do the phone call</string>
    <string name="permission_denied">Permission was denied, phone call can not be done</string>
    <string name="message_permission_disabled">You have disabled the permissions permanently.\n
        To enable the permissions, please go to Settings -> Permissions and enable the required Permissions,
        pressing OK you will be navigated to Settings screen</string>
    <string name="crime_photo_button_description">Take photo of crime scene</string>
    <string name="crime_photo_no_image_description">
        Crime scene photo (not set)
    </string>
    <string name="crime_photo_image_description">Crime scene photo (set)</string>
</resources>