<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorPrimary">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:menu="@menu/fragment_crime_detail"
            app:navigationIcon="@drawable/icon_back" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/crime_photo"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:background="@color/black"
                        android:cropToPadding="true"
                        android:contentDescription="@string/crime_photo_no_image_description"
                        android:scaleType="centerInside" />

                    <ImageButton
                        android:id="@+id/crime_camera"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/crime_photo_button_description"
                        android:src="@drawable/ic_camera" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/crime_title_label"
                        android:textAppearance="?attr/textAppearanceHeadline5" />

                    <EditText
                        android:id="@+id/crime_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/crime_title_hint"
                        android:importantForAutofill="no"
                        android:inputType="text" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/crime_details_label"
                android:textAppearance="?attr/textAppearanceHeadline5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/crime_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    tools:text="Friday, Dec 24, 2021" />

                <Button
                    android:id="@+id/crime_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="12:56" />

            </LinearLayout>

            <CheckBox
                android:id="@+id/crime_solved"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/crime_solved_label" />

            <Button
                android:id="@+id/crime_suspect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/crime_suspect_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/crime_report"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/crime_report_text" />

                <Button
                    android:id="@+id/call_suspect"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/call_suspect"
                    app:icon="@drawable/ic_call" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
